# kaggle-ptcg-ai-battle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
competition/: overview.md  report_draft.md  report_evidence.md  report_writeup.md  submission_plan.md
competition/matchups/: INDEX.md  archaludon.md  crustle.md  dragapult.md  ex_lucario.md  great_tusk_lo.md  grimmsnarl.md  mirror_nonex.md
daily_reports/: 20260616.md  20260617.md  20260618.md  20260620.md  20260621.md  20260622.md  20260624.md  20260625.md  20260704.md  20260705.md  20260706.md  20260707.md  20260708.md  20260709.md  20260710.md  20260711.md  20260712.md  20260713.md  20260714.md  20260715.md  20260717.md  20260718.md  20260719.md  20260720.md  20260721.md  20260722.md  20260723.md  20260724.md  README.md
data/: README.md
references/: README.md
references/knowledge/: INDEX.md  README.md  band_meta_myso_0716.md  disc_code_sweep_0714.md  discussion_intel_0723.md  discussions.md  dragapult_lucariov3_0623.md  engine_source_0703.md  engine_update_0718.md  external_ideas.md  field_lb_and_matchup_intel_0713.md  field_reports_rl_and_pilot_0712.md  gold_band_scout_0714.md  ladder_ab_testing_0721.md  lo_mill_notebook_0702.md  matchmaker_mechanics_0717.md  note_tomatomato_worldrank2_0705.md  notebooks.md  pokemon_names_ja.md  prize_tracking_starmie_0622.md  (+7 more)
scripts/: build_submission.py  check_gpu.py  record_submission.py  validate_submission.py
submit/: SUBMISSIONS.md  submissions.csv
templates/: daily_report.md
tests/: test_metrics.py  test_validate_submission.py
workspace/: README.md
(+560 files in other folders)
