[project]
name = "kaggle-agent-template"
version = "0.1.0"
description = "Simple Kaggle template for Claude Code assisted experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "ipykernel",
  "jupyterlab",
  "kaggle",
  "matplotlib",
  "numpy",
  "pandas",
  "pyyaml",
  "scikit-learn",
  "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_agent_template"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "data",
  "references/raw",
  "workspace/**/results",
  "submit/**/model",
  "submit/**/models",
  "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
